# cairo-vm-py

./: .gitignore  .gitmodules  .tarpaulin.toml  .terpaulin.toml  Cargo.toml  Makefile  README.md  comparer_tracer.py  devnet_testing.md  errors_tests.py  erros_tests.py  get_builtins_initial_stack.py  hints_tests.py  pyproject.toml  run_python_tests.sh  run_tests.sh
.github/: Dockerfile  codecov.yml  maturin-publish.dockerfile
.github/workflows/: compare_memory_devnet.yml  coverage.yml  ext-integration.yml  name: rust.yml  pypi-publish.yml  python.yml  rust.yml
cairo_programs/: _keccak.cairo  array_sum.json  assert_250_bit.cairo  assert_le_felt.cairo  assert_le_felt_hint.cairo  assert_lt_felt.cairo  assert_lt_felt_hint.cairo  assert_nn_hint.cairo  assert_not_equal.cairo  assert_not_equal_hint.cairo  assert_not_zero.cairo  assert_not_zero.json  bigint_to_uint256.cairo  blake2s_compute.cairo  blake2s_felt.cairo  blake2s_finalize.cairo  blake2s_hello_world_hash.cairo  blake2s_integration_tests.cairo  blake2s_module.cairo  compute_slope.cairo  default_dict_new.cairo  dict_new.cairo  dict_read.cairo  dict_squash.cairo  dict_update.cairo  dict_write.cairo  div_mod_n.cairo  double_value_offset.cairo  ec_doble.cairo  ec_double_slope.cairo  ec_mul_inner.cairo  ec_negate.cairo  ecdsa.cairo  fast_ec_add.cairo  fibonacci.json  final_stack.cairo  find_element.cairo  get_builtins_initial_stack.cairo  get_point_from_x.cairo  hint_print_vars.cairo  (+45 more)
cairo_programs/bad_programs/: error_msg_attr.cairo
scripts/: README.md  build_envs.sh  cheatable-entrypoint-protostar.patch  install-devnet-deps.sh  install-kakarot-deps.sh  install-protostar-deps.sh  install-zerosync-deps.sh  move-to-cairo-rs-py.patch  move-to-cairo-vm-py.patch  zerosync-runner-changes.patch
scripts/memory_comparator/: build_envs.sh  memory_comparator.py  output-memory-cairo-lang.patch  output-memory-cairo-rs-py.patch  patch-memory-cairo-rs-py.patch  run_tests_compare_memory.sh
src/: cairo_run.rs  cairo_runner.rs  dict_manager.rs  ecdsa.rs  execute_hint.rs  ids.rs  instruction_location.rs  lib.rs  memory.rs  memory_segments.rs  pybigint.rs  range_check.rs  relocatable.rs  run_context.rs  run_resource.rs  scope_manager.rs  to_felt_or_relocatable.rs  utils.rs  vm_core.rs  vm_exception.rs
tests/: compare_vm_state.sh  get_builtins_initial_stack.py  hints_tests.py  memory_comparator.py  memory_tests.py  prepare_os_context.py
