[package]
name = "cairo-rs-py"
version = "0.1.1"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18", features = ["num-bigint"] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "e0da0be05f3b5c2dfde12570fa7604fa28729805" }
cairo-felt = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "e0da0be05f3b5c2dfde12570fa7604fa28729805" }
num-bigint = "0.4"
lazy_static = "1.4.0"

[dev-dependencies.rusty-hook]
version = "0.11"

[features]
extension-module = ["pyo3/extension-module"]
embedded-python = ["pyo3/auto-initialize"]
default = ["extension-module"]

[lib]
name = "cairo_rs_py"
crate-type = ["cdylib"]
required-features = ["extension-module"]

[profile.release]
debug = 1
