[package]
name = "cairo-rs-py"
version = "0.2.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18", features = ["num-bigint"] }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "1fb4a72ee753059129d921fb652dd3c0a0071686" }
cairo-felt = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "1fb4a72ee753059129d921fb652dd3c0a0071686" }
num-bigint = "0.4"
lazy_static = "1.4.0"
bincode = { tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", default-features = false, features = [
    "serde",
] }

[dev-dependencies.rusty-hook]
version = "0.11"

[features]
extension-module = ["pyo3/extension-module"]
embedded-python = ["pyo3/auto-initialize"]
default = ["extension-module"]

[lib]
name = "cairo_rs_py"
crate-type = ["cdylib"]
required-features = ["extension-module"]

[profile.release]
debug = 1
